# codegraph-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REDDIT_POST.md  SIP_Project-docs.docx  cg-cheatsheet.md  pyproject.toml
.github/workflows/: ci.yml
codegraph_cli/: __init__.py  agents.py  bug_detector.py  chat_agent.py  chat_session.py  cli.py  cli_chat.py  cli_diagnose.py  cli_docs.py  cli_explore.py  cli_export.py  cli_groups.py  cli_health.py  cli_history.py  cli_onboard.py  cli_quickstart.py  cli_refactor.py  cli_setup.py  cli_suggestions.py  cli_test.py  cli_tui.py  cli_v2.py  cli_watch.py  cli_workflows.py  codegen_agent.py  config.py  config_manager.py  context_manager.py  crew_agents.py  crew_chat.py  crew_tools.py  diff_engine.py  embeddings.py  graph_export.py  llm.py  models.py  models_v2.py  orchestrator.py  parser.py  performance_analyzer.py  (+8 more)
codegraph_cli/templates/: graph_interactive.html
docs/: USER_GUIDE.md  architecture.md  commands.md  llm_providers.md  setup.md  workflows.md
tests/: conftest.py  test_agents.py  test_bug_detector.py  test_cli.py  test_cli_workflows.py  test_parser.py  test_security_scanner.py  test_storage.py  test_vector_store.py
tests/fixtures/sample_project/: README.md  main.py  models.py  processor.py  utils.py
