[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph-cli"
version = "2.1.3"
description = "AI-powered code intelligence CLI with multi-agent analysis, impact graphs, and conversational coding."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ali Nasir", email = "muhammadalinasir00786@gmail.com"}
]
keywords = [
    "code-analysis", "code-intelligence", "cli", "ai", "code-graph",
    "rag", "impact-analysis", "refactoring", "crewai", "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "typer>=0.12.0,<1.0.0",
    "toml>=0.10.2",
    "lancedb>=0.4.0",
    "pyarrow>=14.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "rich>=13.0.0",
    "python-docx>=1.0.0",
    "pydantic>=2.0.0",
]


[project.urls]
Homepage = "https://github.com/al1-nasir/codegraph-cli"
Documentation = "https://github.com/al1-nasir/codegraph-cli#readme"
Repository = "https://github.com/al1-nasir/codegraph-cli"
Issues = "https://github.com/al1-nasir/codegraph-cli/issues"
Changelog = "https://github.com/al1-nasir/codegraph-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
crew = [
    "crewai>=0.80.0",
]
explore = [
    "starlette>=0.27.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
watch = [
    "watchdog>=3.0.0",
]
embeddings = [
    "torch>=2.0.0",
    "transformers>=4.48.0,<5.0.0",
]
all = [
    "crewai>=0.80.0",
    "starlette>=0.27.0",
    "uvicorn>=0.24.0",
    "torch>=2.0.0",
    "transformers>=4.48.0,<5.0.0",
    "watchdog>=3.0.0",
]

[project.scripts]
cg = "codegraph_cli.cli:cli_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=codegraph_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.setuptools.packages.find]
include = ["codegraph_cli*"]

[tool.setuptools.package-data]
codegraph_cli = ["templates/*.html"]

[tool.coverage.run]
source = ["codegraph_cli"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

